fixing author label spacing

--- a/src/blog-gallery/blog.css
+++ b/src/blog-gallery/blog.css
@@ -41,7 +41,6 @@
     font-size: 10pt;
     font-family: 'Montserrat', sans-serif;
     text-decoration: none;
-    margin-bottom: 10px;
 }
 
 .heading:hover {
@@ -78,9 +77,18 @@ table {
     padding: 30px;
 }
 
+.author-name {
+    width: 200px;
+ }
+
 @media screen and (max-width: 1000px) {
     table {
         width: 90%;
+    }
+
+    .author-name {
+        width: auto;
+        padding-left: 5px;
     }
 
     .author-pic {
@@ -97,11 +105,8 @@ table {
     tr {
         display: flex;
         flex-wrap: wrap;
-        width: 100%;
-    }
-
-    td {
-        display: block;
+        justify-items: flex-start;
+        align-items: flex-start;
         width: 100%;
     }
 
